--- a/app/components/ImageAndText/styles.module.css
+++ b/app/components/ImageAndText/styles.module.css
@@ -8,4 +8,14 @@
   display: flex;
   flex-direction: column;
   gap: 24px;
+  padding: 0% 10%;
+  text-align: center;
+}
+
+.title {
+  font-size: 3rem;
+}
+
+.description {
+  font-size: 1rem;
 }
