--- a/app/components/ProductGrid/styles.module.css
+++ b/app/components/ProductGrid/styles.module.css
@@ -1,7 +1,12 @@
+.productGridContainer {
+  border: 3px solid red;
+}
+
 .productGrid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: 1rem;
+  color: white;
 }
 
 .product {
