--- a/app/components/ImageAndText/styles.module.css
+++ b/app/components/ImageAndText/styles.module.css
@@ -7,15 +7,26 @@
 .textContainer {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 24px;
   padding: 0% 10%;
-  text-align: center;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
+  width: 50%;
 }
 
 .title {
-  font-size: 3rem;
+  font-size: 3.25rem;
 }
 
 .description {
   font-size: 1rem;
+}
+
+.img {
+  flex-grow: 0;
+  border: 2px solid yellow;
+  flex-shrink: 1;
 }
