--- a/app/components/Link/Link.module.css
+++ b/app/components/Link/Link.module.css
@@ -3,9 +3,12 @@
   font-size: 1rem;
   padding: 1rem 2rem;
   margin: 0px auto;
-  transition: background-color 0.3s ease-in-out; /* Add this line for a smooth color transition */
+  transition: background-color 0.1s ease-in-out; /* Add this line for a smooth color transition */
+  color: black;
 }
 
 .linkButton:hover {
-  background-color: black; /* This will change the button's background color to black on hover */
+  background-color: var(
+    --color-primary-hover
+  ); /* This will change the button's background color to black on hover */
 }
