--- a/app/components/ProductCard/ProductCard.module.css
+++ b/app/components/ProductCard/ProductCard.module.css
@@ -2,10 +2,35 @@
   border: 1px solid red;
 }
 
+.cardContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  object-fit: cover;
+}
+
 .title {
   color: white;
+  margin: 0px;
 }
 
 .cost {
   color: white;
+}
+
+.imgContainer {
+  height: 400px;
+}
+
+.img {
+  flex-grow: 1;
+  height: auto;
+}
+
+.testImgContainer {
+  flex-grow: 1;
+}
+
+.testContaienr {
+  display: flex;
 }
