--- a/app/styles/reset.css
+++ b/app/styles/reset.css
@@ -7,7 +7,9 @@ body {
 
 h1,
 h2,
-p {
+h3,
+h4,
+h5 p {
   margin: 0;
   padding: 0;
 }
@@ -16,25 +18,12 @@ h1 {
   font-size: 1.6rem;
   font-weight: 700;
   line-height: 1.4;
-  margin-bottom: 2rem;
-  margin-top: 2rem;
 }
 
 h2 {
   font-size: 1.2rem;
   font-weight: 700;
   line-height: 1.4;
-  margin-bottom: 1rem;
-}
-
-h4 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-h5 {
-  margin-bottom: 1rem;
-  margin-top: 0.5rem;
 }
 
 p {
