--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -8,7 +8,7 @@
   --color-light: #fff;
 
   --color-primary: #e7fb52;
-  --color-primary-hover: #e9ff45;
+  --color-primary-hover: #d6e84d;
   --color-background: #1f1f21;
 }
 
