--- a/app/components/ImageAndText/styles.module.css
+++ b/app/components/ImageAndText/styles.module.css
@@ -12,15 +12,16 @@
   align-items: center;
   justify-content: center;
   gap: 24px;
-  padding: 0% 10%;
+  padding: 0% 7%;
   flex-grow: 1;
   flex-shrink: 1;
   flex-basis: auto;
   width: 50%;
+  border: 2px solid red;
 }
 
 .title {
-  font-size: 3.25rem;
+  font-size: 4.25rem;
   margin: 0px;
   font-family: 'Oswald', sans-serif;
 }
