--- a/app/components/Card/Card.module.css
+++ b/app/components/Card/Card.module.css
@@ -1,6 +1,11 @@
 .card {
-  border: 1px solid red;
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 0.25rem;
+  background-color: #28282a;
+  padding: 1.5rem;
+}
+
+.card > h3 {
+  font-size: 1.5rem;
 }
