--- a/app/styles/product.module.css
+++ b/app/styles/product.module.css
@@ -7,3 +7,13 @@
 .productContainer > div {
   flex: 1;
 }
+
+.descriptionContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+
+.img {
+  height: auto;
+}
